# RepicacionBio

./: colabs_361_y_nuevo_proyecto_ovo_653a0f00.plan.md
ovo/: .gitattributes  .gitignore  Justfile  LICENSES_THIRD_PARTY  MANIFEST.in  README.md  pyproject.toml
ovo/.github/: PULL_REQUEST_TEMPLATE.md
ovo/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  new_method_request.yml
ovo/.github/workflows/: build-and-test.yml
ovo/.streamlit/: config.toml
ovo/docs/: README.md
ovo/docs/source/: conf.py  index.md
ovo/docs/source/_static/: theme.css
ovo/docs/source/apidocs/: database.md  index.rst
ovo/docs/source/developer_guide/: index.md  plugin_development.md  quickstart.md
ovo/docs/source/plugins/: index.md  promb.md  proteindj.md
ovo/docs/source/proteinqc/: index.md  quickstart.md  walkthrough.md
ovo/docs/source/rfdiffusion/: binder_design.md  binder_diversification.md  index.md  quickstart.md  scaffold_design.md
ovo/docs/source/user_guide/: containers.md  index.md  installation.md  schedulers.md
ovo/ovo/: __init__.py  run_app.py
ovo/ovo/app/assets/: styles.css
ovo/ovo/app/components/: __init__.py  acceptance_thresholds_components.py  create_new_pool.py  custom_elements.py  descriptor_dialog.py  descriptor_explorer.py  descriptor_job_components.py  descriptor_scatterplot.py  descriptor_table.py  descriptor_tiles.py  download_component.py  history_components.py  input_components.py  navigation.py  preview_components.py  scheduler_components.py  sidebar.py  submission_components.py  trim_components.py  workflow_visualization_components.py
ovo/ovo/app/pages/: __init__.py  debug.py  import_export.py  welcome.py
ovo/ovo/app/utils/: bindcraft_utils.py  cached_db.py  page_init.py  protein_qc_plots.py  testing.py
ovo/ovo/cli/: app.py  common.py  init.py  main.py  module.py  scheduler_cli.py
ovo/ovo/cli/templates/: LICENSE_MIT.txt  README.md  (+2 more)
ovo/ovo/core/: auth.py  aws.py  configuration.py  plugins.py  storage.py
ovo/ovo/envs/: boltz.cpu.yml  boltz.yml  colabdesign.cpu.yml  colabdesign.yml  dssp.yml  esm.yml  huggingface-transformers.yml  ligandmpnn.yml  proteinmpnn-fastrelax.yml  proteinsol.yml  python-structure.yml  rfdiffusion.cpu.yml  rfdiffusion.yml
ovo/ovo/pipelines/: nextflow_default.config
ovo/scripts/: migrate_dataclass.py  migrate_descriptor_key.py
ovo/tests/integration_tests/: conftest.py  test_full_proteinqc_dssp_proteinsol_esmif.py  test_full_rfdiffusion_fastrelax_binder_design_workflow.py  test_full_rfdiffusion_ligandmpnn_binder_design_workflow.py  test_full_rfdiffusion_scaffold_design_workflow.py
ovo/tests/unit_tests/: conftest.py  test_app_binder_design.py  test_app_scaffold_design.py  test_cli_module.py  test_cli_scheduler.py  test_config_object.py  test_design_workflow.py  test_excel_export.py  test_import_export.py  test_pdb_parsing.py  test_python_api.py  test_residue_selection.py
(+552 files in other folders)
